--- a/Scraping_JohnnyCotrina/Visualizacion.ipynb
+++ b/Scraping_JohnnyCotrina/Visualizacion.ipynb
@@ -154,11 +154,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2647ea34e536f865ab67ff9ddee7fd78773d956cec0cab53c79b32cd10da5d83"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.1 64-bit",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -172,9 +169,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "997682109dcbf5ef169ee84c99bcbf6ed216bb568417d79c3d34586cec45b132"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
