avance ultimos analisis

--- a/Scraping_RobinsonFlores/Analisis_OpcionEmpleo.ipynb
+++ b/Scraping_RobinsonFlores/Analisis_OpcionEmpleo.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acea8df7",
+   "id": "a991adfb",
    "metadata": {},
    "source": [
     "# ¿Cuál es el número de ofertas laborales para desarrollador dentro de la plataforma, general y por  localidad?"
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68961c5d",
+   "id": "a336bcec",
    "metadata": {},
    "source": [
     "# ¿Cuál es el rango de sueldo para desarrolladores dentro de la plataforma?"
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a367d97c",
+   "id": "4e504390",
    "metadata": {},
    "source": [
     "# ¿Cuál o cuáles son modos de permanecía laboral dentro de la plataforma?"
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77eeb921",
+   "id": "c36f2e40",
    "metadata": {},
    "source": [
     "# ¿Cuál es el comportamiento de las publicaciones de ofertas laborales dentro de la plataforma opcionempleo.com?"
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3ebdf3",
+   "id": "644c594b",
    "metadata": {},
    "source": [
     "# ¿Cuál es el promedio de ofertas laborales para desarrolladores en cada ciudad principal (Guayaquil, Quito, Cuenca) del Ecuador dentro de las 3 plataformas?"
@@ -1177,27 +1177,363 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "a6e3e5e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(opcionEmpleo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "f6777633",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cargo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ciudad</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ambato</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Azuay</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cuenca</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ecuador</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Esmeraldas</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Guayaquil</th>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Guayas</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ibarra</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Latacunga</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Machala</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manta</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mocha</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nobol</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Otavalo</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pedernales</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Portoviejo</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quevedo</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quito</th>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rumiñahui</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>San Lorenzo</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Santo Domingo de los Colorados</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tungurahua</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ventanas</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Cargo\n",
+       "Ciudad                               \n",
+       "Ambato                              3\n",
+       "Azuay                               1\n",
+       "Cuenca                              9\n",
+       "Ecuador                            23\n",
+       "Esmeraldas                          1\n",
+       "Guayaquil                          60\n",
+       "Guayas                              7\n",
+       "Ibarra                              1\n",
+       "Latacunga                           1\n",
+       "Machala                             1\n",
+       "Manta                               3\n",
+       "Mocha                               4\n",
+       "Nobol                               1\n",
+       "Otavalo                             1\n",
+       "Pedernales                          1\n",
+       "Portoviejo                          1\n",
+       "Quevedo                             1\n",
+       "Quito                             153\n",
+       "Rumiñahui                           1\n",
+       "San Lorenzo                         1\n",
+       "Santo Domingo de los Colorados      4\n",
+       "Tungurahua                          1\n",
+       "Ventanas                            1"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opcionEmpleo = empleos\n",
+    "opcionEmpleo = opcionEmpleo[['Ciudad','Cargo']]\n",
+    "opcionEmpleo = opcionEmpleo.groupby('Ciudad').count()\n",
+    "opcionEmpleo\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "a7ae2c4a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>titulo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>provincia</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ecuador</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Guayaquil</th>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manta</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pichincha</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quito</th>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>otros</th>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           titulo\n",
+       "provincia        \n",
+       "Ecuador         3\n",
+       "Guayaquil      68\n",
+       "Manta           1\n",
+       "Pichincha       3\n",
+       "Quito          38\n",
+       "otros          35"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cargamos df\n",
+    "expertini = pd.read_csv(\"../CSVs_Obtenidos/jobs_expertini.csv\", sep=';' )\n",
+    "expertini = expertini[['titulo','provincia']]\n",
+    "expertini = expertini.groupby('provincia').count()\n",
+    "expertini"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "3dc7dcba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cargo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ciudad</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Guayaquil</th>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manta</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quito</th>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tulcán</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           cargo\n",
+       "ciudad          \n",
+       "Guayaquil     41\n",
+       "Manta          1\n",
+       "Quito         34\n",
+       "Tulcán         1"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "computrabajo = pd.read_csv(\"../CSVs_Obtenidos/cargos.csv\", sep='|' )\n",
+    "computrabajo = computrabajo[['cargo','ciudad']]\n",
+    "computrabajo = computrabajo.groupby('ciudad').count()\n",
+    "computrabajo"
+   ]
   },
   {
    "cell_type": "code",
