Agg Preguntas en el Jupyter Notebook

--- a/Scraping_JeanVillamar/Graficos.ipynb
+++ b/Scraping_JeanVillamar/Graficos.ipynb
@@ -205,6 +205,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuáles son las empresas con mayor demanda de ofertas laborales en el campo de los desarrolladores? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -287,6 +294,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Qué empresas están ofertando puestos laborales de desarrolladores en cada ciudad? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -316,6 +330,13 @@
     "p9_ax.tick_params(labelsize=10, pad=16)\n",
     "p9_ax.set_title('Empresas disponibles en cada provincia', fontsize=15)\n",
     "plt.show() # esto no es necesario en Jupyter Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuál es la distribución de ofertas laborales de desarrolladores respecto a su categoría? "
    ]
   },
   {
