--- a/Scraping_RobinsonFlores/Analisis_OpcionEmpleo.ipynb
+++ b/Scraping_RobinsonFlores/Analisis_OpcionEmpleo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b2ccaf95",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b14f96a1",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "[280 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "97452110",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "freq                  55         265              269  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c6e10829",
    "metadata": {
     "scrolled": false
@@ -346,7 +346,7 @@
        "array([<AxesSubplot:ylabel='Cargo'>], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cb4f4fc1",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "array(['Tiempo completo', 'Permanente', 'Tiempo parcial'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f92d80ae",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "       '24.000-54.000 USD al año'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0b994f72",
    "metadata": {
     "scrolled": false
@@ -598,7 +598,7 @@
        "Temporal                      2       2        1                  2        2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "cd3fdeea",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "Tiempo parcial       2       2        2                  2            2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,23 +700,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f4d7ff03",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001DB201A0040>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "empleos[[\"Ciudad\", \"Empresa\",\"Fecha_publicacion\", \"Permanencia\",\"Horario\"]].groupby('Ciudad')"
+    "#empleos[[\"Ciudad\", \"Empresa\",\"Fecha_publicacion\", \"Permanencia\",\"Horario\"]].groupby('Ciudad')"
    ]
   },
   {
@@ -729,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a4f4a730",
    "metadata": {},
    "outputs": [],
@@ -752,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "dbb65c3e",
    "metadata": {
     "scrolled": false
@@ -922,7 +913,7 @@
        "[280 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d1af4786",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1112,7 @@
        "2022-08-27             4"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "cdc6bd4e",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1134,7 @@
        "Text(0.5, 1.0, 'Plazas laborales publicadas por fecha')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1177,28 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "12fee3b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(opcionEmpleo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "id": "f6777633",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1325,7 @@
        "Ventanas                            1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,17 +1334,12 @@
     "opcionEmpleo = empleos\n",
     "opcionEmpleo = opcionEmpleo[['Ciudad','Cargo']]\n",
     "opcionEmpleo = opcionEmpleo.groupby('Ciudad').count()\n",
-    "opcionEmpleo\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "opcionEmpleo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "a7ae2c4a",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1378,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Guayaquil</th>\n",
-       "      <td>68</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Manta</th>\n",
@@ -1425,11 +1390,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Quito</th>\n",
-       "      <td>38</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>otros</th>\n",
-       "      <td>35</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1439,14 +1404,14 @@
        "           titulo\n",
        "provincia        \n",
        "Ecuador         3\n",
-       "Guayaquil      68\n",
+       "Guayaquil      70\n",
        "Manta           1\n",
        "Pichincha       3\n",
-       "Quito          38\n",
-       "otros          35"
+       "Quito          35\n",
+       "otros          36"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "3dc7dcba",
    "metadata": {},
    "outputs": [
@@ -1495,8 +1460,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>Ambato</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cuenca</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Guayaquil</th>\n",
-       "      <td>41</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Latacunga</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Manta</th>\n",
@@ -1504,11 +1481,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Quito</th>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tulcán</th>\n",
-       "      <td>1</td>\n",
+       "      <td>82</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1517,13 +1490,15 @@
       "text/plain": [
        "           cargo\n",
        "ciudad          \n",
-       "Guayaquil     41\n",
+       "Ambato         1\n",
+       "Cuenca         1\n",
+       "Guayaquil     91\n",
+       "Latacunga      1\n",
        "Manta          1\n",
-       "Quito         34\n",
-       "Tulcán         1"
+       "Quito         82"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "id": "b62668d5",
    "metadata": {},
    "outputs": [
@@ -1571,8 +1546,8 @@
        "    <tr>\n",
        "      <th>Guayaquil</th>\n",
        "      <td>60</td>\n",
-       "      <td>68</td>\n",
-       "      <td>41</td>\n",
+       "      <td>70</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Manta</th>\n",
@@ -1583,8 +1558,8 @@
        "    <tr>\n",
        "      <th>Quito</th>\n",
        "      <td>153</td>\n",
-       "      <td>38</td>\n",
-       "      <td>34</td>\n",
+       "      <td>35</td>\n",
+       "      <td>82</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1592,12 +1567,12 @@
       ],
       "text/plain": [
        "           Cargo  titulo  cargo\n",
-       "Guayaquil     60      68     41\n",
+       "Guayaquil     60      70     91\n",
        "Manta          3       1      1\n",
-       "Quito        153      38     34"
+       "Quito        153      35     82"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1610,28 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "96a74b2b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guayaquil    169\n",
-      "Manta          5\n",
-      "Quito        225\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(total. sum(axis = 1)).apply(lambda x: x/3, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 38,
    "id": "4ea46d85",
    "metadata": {},
    "outputs": [
@@ -1639,16 +1593,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Guayaquil    56.333333\n",
+      "Guayaquil    73.666667\n",
       "Manta         1.666667\n",
-      "Quito        75.000000\n",
+      "Quito        90.000000\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "print(total. sum(axis = 1).apply(lambda x: x/3))\n"
+    "print(total. sum(axis = 1).apply(lambda x: x/3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "698ea989",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
